<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Beachvolleytävlingar</string>
    <string name="competition_period_current_marker">(nuvarande)</string>
    <string name="current_competition_period">Nuvarande TP</string>
    <string name="show_clazzes">Visa klasser</string>
    <string name="show_levels">Visa nivåer</string>
    <string name="show">Visa</string>
    <string name="registration_not_open">Anmälan har inte öppnat än</string>
    <string name="no_matching_tournaments">Inga turneringar matchade dina filter.</string>
    <string name="sm">SM</string>
    <string name="show_regions">Visa regioner</string>
    <string name="registered">Anmälda</string>
    <string name="see_result">Anmälan och resultat</string>
    <string name="register_result">Resultatregistrering</string>
    <string name="sign_up">Anmälan</string>
    <string name="competition_regulations">Tävlingsbestämmelser</string>
    <string name="show_players">Spelare</string>
    <string name="competition_calendar">Säsongskalendern</string>
    <string name="see_ranking_points">Se rankingpoäng</string>
    <string name="title_activity_ranking_table">RankingTableActivity</string>
    <string name="position">Placering</string>
    <string name="points">Poäng</string>
    <string name="player_results">Resultat</string>
    <string name="player_results_mixed">Mixedresultat</string>
    <string formatted="false" name="player_info_general_part"><![CDATA[%1$s spelar för <b>%2$s</b> och har <b>%3$d</b> poäng i %4$s (rankad <b>%5$d</b>).]]></string>
    <string formatted="true" name="player_info_mixed_part"><![CDATA[<br />I mixed har %1$s <b>%2$d</b> poäng från mixedtävlingar och <b>%3$d</b> poäng inklusive poängen från %4$s (rankad <b>%5$d</b>).]]></string>
    <string name="players">Spelare</string>
    <string name="no_mixed_results">Inga mixedresultat hittades.\n</string>
    <string name="no_results">Inga resultat hittades.\n</string>
    <string name="player_future_entry">Framtidskollen</string>
    <string name="title_activity_courts">Banor</string>
    <string name="courts">Banor</string>
    <string name="satellite">Satellit</string>
    <string name="normal_map">Karta</string>
    <string name="enable_edit_markers">Redigera</string>
    <string name="disable_edit_markers">Sluta redigera</string>
    <string name="ok">Ok</string>
    <string name="edit_help"><b>Observera att alla ändringar du gör sparas direkt, för alla användare.</b>\n\nRedigera infon om eller ta bort en bana genom att klicka på inforutan.\nFlytta en bana genom att hålla ned en markör och dra den till en ny plats.\nLägg till en ny bana genom att långklicka på kartan, redigera sedan infon.</string>
    <string name="edit_help_title">Redigera banor</string>
    <string name="edit_marker_info_title">Redigera bana</string>
    <string name="save">Spara</string>
    <string name="cancel">Avbryt</string>
    <string name="move">Flytta</string>
    <string name="confirm_move_title">Flytta bana</string>
    <string name="confirm_move_message">Är du säker på att vill flytta banan hit?</string>
    <string name="description_hint">Kort beskrivning av banan</string>
    <string name="link_hint">Länk till t.ex. fb-grupp eller förening</string>
    <string name="link_validation_message">Länken måste börja med http:// eller https://.</string>
    <string name="delete_court">Ta bort bana</string>
    <string name="confirm_delete_title">Ta bort bana</string>
    <string name="confirm_delete_message">Är du säker på att du vill ta bort banan och all info om den?</string>
    <string name="court_title_hint">Namn på banan</string>
    <string name="court_number_hint">Antal banor</string>
    <string name="court_title_label">Namn: </string>
    <string name="link_label">Länk: </string>
    <string name="description_label">Besk.: </string>
    <string name="court_number_label">Antal:</string>
    <string name="num_courts_validation_message">Antal banor måste vara mellan 1 och 99.</string>
    <string name="confirm_create_court_title">Skapa bana</string>
    <string name="confirm_create_message">Vill du skapa en bana här?</string>
    <string name="create_court">Skapa bana</string>
    <string name="search_player">Sök spelare</string>
    <string name="menu_courts_unlocked">Ny meny \"Banor\" tillagd</string>
    <string name="courts_feature_description">Här kan du hitta banor i närheten tillsammans med info om bokning, spel, status etc för dem.\n\nKartan och info om banorna kan ändras av alla och du får mer än gärna uppdatera de banor du känner till med relevant och korrekt info.\nTryck på menynknappen och välj sedan \"Redigera\" för att göra detta.</string>
    <string name="do_not_show_again">Visa inte igen</string>
    <string name="courts_feature_title">Beachvolleybanor i Sverige</string>
    <string name="competitions">Tävlingar</string>
    <string name="close">Stäng</string>
    <string name="open">Öppna</string>
    <string name="rules">Beachvolleyregler</string>
    <string name="see_info">Info</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="see_result_in_app">Se resultat (beta)</string>

</resources>
